# video_edit

./: .gitmodules  CMakeLists.txt  VideoEdit_zh_CN.ts  main.cpp  mainwindow.cpp  mainwindow.ui
cmake/Modules/: FindFFmpeg.cmake  FindZeroMQ.cmake  FindZeroMQ1.cmake
editor/: CMakeLists.txt  main.cpp
editor/ui/: MediaItem.cpp  MediaItem.h  MediaItemDelegate.cpp  MediaItemDelegate.h  VideoEditor_zh_CN.ts  mainwindow.cpp  mainwindow.h  mainwindow.ui
patch/: 0001-do-not-build-examples-and-bindings.patch
